# srsim-hw-schema

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  releases.yaml  srsim-supported-hardware.json  srsim_hw_schema.py  vite.config.ts
.github/workflows/: pages.yml
releases/25.10/: srsim-supported-hardware.json
releases/25.7/: srsim-supported-hardware.json
releases/sros/25.10/: sros-supported-hardware.json
releases/sros/25.7/: sros-supported-hardware.json
releases/sros/26.3/: sros-supported-hardware.json
releases/srsim/25.10/: srsim-supported-hardware.json
releases/srsim/25.7/: srsim-supported-hardware.json
releases/srsim/26.3/: srsim-supported-hardware.json
scripts/: build-default-hardware-profiles.mjs  fetch-release-json.sh  sync-releases-manifest.mjs
src/: App.tsx  edaComponents.test.ts  edaComponents.ts  edaValidation.test.ts  edaValidation.ts  main.tsx  matrix.test.ts  matrix.ts  releaseSchemas.ts  releases.test.ts  releases.ts  schemaSlots.test.ts  schemaSlots.ts  styles.css  topologyYaml.ts  types.ts  validation.test.ts  validation.ts
src/components/: ComponentEditor.tsx  FieldAutocomplete.tsx  MatrixTable.tsx  ValidatorPanel.tsx  YamlPreview.tsx  YamlTextArea.tsx
src/data/: eda-yang-catalog.json  releases-manifest.json  srsim-hw.schema.json
src/data/releases/: 25.10.json  25.7.json  26.3.json  sros-25.10.json  sros-25.7.json  sros-26.3.json  srsim-25.10.json  srsim-25.7.json  srsim-26.3.json
tests/: __init__.py  test_clab_fragment.py  test_releases.py
