[project]
name = "srsim-hw-schema"
version = "0.1.0"
description = "Generate and query SR-SIM supported hardware schemas from Nokia appendices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.scripts]
srsim-hw-schema = "srsim_hw_schema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["srsim_hw_schema"]
